Update endpoint screenshot

--- a/src/content/graphos/cloud-routing/index.mdx
+++ b/src/content/graphos/cloud-routing/index.mdx
@@ -85,14 +85,7 @@ Serverless routers have additional statuses, including **Sleeping** and **Delete
 
 </Note>
 
-You can see your cloud router's status in GraphOS Studio on the associated graph's **Overview** page.
-
-<img
-  className="screenshot"
-  alt="Variant overview page in GraphOS Studio"
-  src="../img/cloud-routing/graph-overview.jpg"
-  width="700"
-/>
+You can see your cloud router's status in GraphOS Studio on the associated graph's **Overview** page under **Cloud Router Details**.
 
 ### Initializing
 
