--- a/src/content/graphos/org/sso/okta-integration-guide.mdx
+++ b/src/content/graphos/org/sso/okta-integration-guide.mdx
@@ -23,6 +23,12 @@ Setup requires an Okta account with administrator privileges.
 
 ### Step 1. Create a custom app integration
 
+<Note>
+
+To use the latest version of Apollo's SSO, ensure you are creating a custom app integration in Okta rather than using the GraphOS app in the Okta Application Network.
+
+</Note>
+
 <SSOSAMLInfoRequest />
 
 2. From your Okta Administrator Dashboard, go to the **Applications** view. Click **Create App Integration**.
