DOC-124 clarify preview

--- a/src/content/basics/resources/product-launch-stages.mdx
+++ b/src/content/basics/resources/product-launch-stages.mdx
@@ -9,9 +9,11 @@ All launches of Apollo products, features, and open-source releases use two laun
 
 ### Preview
 
-Product and feature previews are usually announced publicly and represent a near-complete version of associated functionality. However, previews are not officially supported with any SLA, and breaking API changes are possible between incremental versions of a preview.
+Product and feature previews represent an early version of associated functionality.
 
-A preview might still contain bugs or undergo iteration. You're encouraged to try previews in test environments to familiarize yourself with upcoming functionality before it reaches [general availability](#general-availability).
+Previews aren't officially supported with any SLA, and breaking API changes are possible between incremental versions of a preview.
+
+We encourage you to provide your feedback about functionality and issues you encounter when trying previews in your development and test environments. We might release multiple previews before the functionality reaches [general availability](#general-availability).
 
 ### General availability
 
@@ -53,4 +55,4 @@ Products, features, and open-source releases that reach end-of-life are no longe
 
 End-of-life releases published to a package registry aren't removed from that registry. This means you can still install end-of-life versions past the end-of-life date (though Apollo strongly recommends against this).
 
-Do not run end-of-life open-source releases in production. Upgrade to the latest generally available release as soon as possible to ensure you continue receiving security patches, bug fixes, new features, and compatibility with GraphOS features.
+**Do not run end-of-life open-source releases in production**. Upgrade to the latest generally available release as soon as possible to ensure you continue receiving security patches, bug fixes, new features, and compatibility with GraphOS features.
