--- a/src/content/graphos/org/sso/microsoft-entra-id-integration-oidc-guide.mdx
+++ b/src/content/graphos/org/sso/microsoft-entra-id-integration-oidc-guide.mdx
@@ -76,7 +76,10 @@ To complete the configuration, complete the Apollo-provided link provided in ste
 - **Issuer**: the issuer value you copied from the **OpenID Connect metadata document**
 - **Discovery URL**: you don't need to enter this since the **OpenID Connect metadata document** URL follows the standard `/.well-known/openid-configuration` format
 
-Once submitted, inform your Apollo contact. They will then be able to enable SSO.
+Once submitted, inform your Apollo contact. They will then be able to complete your SSO setup.
+
+Once your SSO setup is finalized, team members who previously had access to GraphOS will need to log back in via the new SSO setup.
+To give them access, you first need to assign them in Entra.
 
 ## Assign users in Entra ID
 
