--- a/src/content/graphos/org/sso/microsoft-entra-id-integration-saml-guide.mdx
+++ b/src/content/graphos/org/sso/microsoft-entra-id-integration-saml-guide.mdx
@@ -82,7 +82,11 @@ Setup requires at least a [Cloud Application Administrator](https://learn.micros
 
 ### Step 2. Send SAML metadata to Apollo
 
-Send your Apollo contact the **App Federation Metadata URL** you previously copied. Your Apollo contact will complete your SSO setup.
+Send your Apollo contact the **App Federation Metadata URL** you previously copied.
+They will then be able to complete your SSO setup.
+
+Once your SSO setup is finalized, team members who previously had access to GraphOS will need to log back in via the new SSO setup.
+To give them access, you first need to assign them in Entra.
 
 ## Assign users in Entra ID
 
