--- a/src/content/graphos/org/sso/oidc-integration-guide.mdx
+++ b/src/content/graphos/org/sso/oidc-integration-guide.mdx
@@ -54,8 +54,9 @@ These steps generally require administrative access to your IdP.
 
 ### Step 2. Send OIDC metadata to Apollo
 
-To complete the configuration, complete the Apollo-provided link from step 1 with the appropriate information and inform your Apollo contact. They will then complete your SSO setup.
+To complete the setup, complete the Apollo-provided link from step 1 with the appropriate information and inform your Apollo contact.
+They will then be able to complete your SSO setup.
 
-Once your SSO configuration is live, assign users to your new Apollo GraphOS application in your IdP. For help assigning the relevant groups and users, contact your SSO or Identity & Access Management team. If organizations members could previously login before you implemented SSO,they must re-login to GraphOS Studio with SSO.
+Once your SSO setup is live, assign users to your new Apollo GraphOS application in your IdP. For help assigning the relevant groups and users, contact your SSO or Identity & Access Management team. If organizations members could previously login before you implemented SSO, they must re-login to GraphOS Studio with SSO.
 
-Once you've confirmed the new configuration works as expected, remove any legacy Apollo GraphOS applications in your IdP if they exist.
+Once you've confirmed the new setup works as expected, remove any legacy Apollo GraphOS applications in your IdP.
