--- a/src/content/graphos/org/sso/okta-integration-guide.mdx
+++ b/src/content/graphos/org/sso/okta-integration-guide.mdx
@@ -25,7 +25,7 @@ Setup requires an Okta account with administrator privileges.
 
 <Note>
 
-To use the latest version of Apollo's SSO, ensure you are creating a custom app integration in Okta rather than using the GraphOS app in the Okta Application Network.
+To use the latest version of Apollo's SSO, ensure you are _creating a custom app integration_ in Okta rather than using the GraphOS app in the Okta Application Network.
 
 </Note>
 
@@ -87,9 +87,12 @@ To use the latest version of Apollo's SSO, ensure you are creating a custom app 
 2. Copy and paste the contents of the **Metadata URL** text box into a text file.
 3. Send the **Metadata URL** to your Apollo contact. They will complete your SSO setup.
 
+Once your SSO setup is finalized, team members who previously had access to GraphOS will need to log back in via the new SSO setup.
+To give them access, you first need to assign them in Okta.
+
 ## Assign users in Okta
 
-Once your Apollo integration is set up, you need to assign users to it so they can access GraphOS. You can assign individual users or groups by following these steps:
+Once your SSO is set up, you need to assign users to it so they can access GraphOS. You can assign individual users or groups by following these steps:
 
 1. From your Okta Administrator Dashboard, open the **Applications** view from the left menu and open the Apollo GraphOS integration. Then, click the **Assignments** tab.
 
