--- a/src/content/shared/sso-migration-notice.mdx
+++ b/src/content/shared/sso-migration-notice.mdx
@@ -1,5 +1,5 @@
 <Tip>
 
-If your organization's SSO was set up before April 2024 according to the [legacy instructions](#legacy-setup), we recommend creating a new SSO configuration with the [updated instructions](#setup).
+If your organization's SSO was set up before April 2024 according to the [legacy instructions](#legacy-setup), Apollo highly recommends creating a new SSO configuration with the [updated instructions](#setup).
 
 </Tip>
