--- a/src/content/graphos/org/sso/okta-integration-guide.mdx
+++ b/src/content/graphos/org/sso/okta-integration-guide.mdx
@@ -87,7 +87,7 @@ To use the latest version of Apollo's SSO, ensure you are _creating a custom app
 2. Copy and paste the contents of the **Metadata URL** text box into a text file.
 3. Send the **Metadata URL** to your Apollo contact. They will complete your SSO setup.
 
-Once your SSO setup is finalized, team members who previously had access to GraphOS will need to log back in via the new SSO setup.
+Once your SSO setup is finalized, team members who previously had access to GraphOS must log back in via the new SSO setup.
 To give them access, you first need to assign them in Okta.
 
 ## Assign users in Okta
