--- a/src/content/graphos/org/sso/microsoft-entra-id-integration-oidc-guide.mdx
+++ b/src/content/graphos/org/sso/microsoft-entra-id-integration-oidc-guide.mdx
@@ -25,10 +25,10 @@ Setup requires at least a [Cloud Application Administrator](https://learn.micros
 
 ### Step 1. Create an Entra ID app registration
 
-1. Send a request to your Apollo contact to configure an OIDC SSO integration. Include the organization name(s) you are setting up SSO for, as well as the email domains you want to associate with the organization. Your Apollo contact will respond with:
+1. Send a request to your Apollo contact to configure an OIDC SSO integration. Include the organization name(s) you are setting up SSO for and the email domains you want to associate with the organization. Your Apollo contact will respond with:
 
    - A redirect URI
-   - A link to a form where you can submit your SSO information to Apollo—you'll use this form in the last setup step.
+   - A link to a form where you can submit your SSO information to Apollo. You'll use this form in the last setup step.
 
    <Note>
 
@@ -36,11 +36,11 @@ Setup requires at least a [Cloud Application Administrator](https://learn.micros
 
    </Note>
 
-2. Go to your [Microsoft Entra admin center](https://entra.microsoft.com/). Alternatively, you can sign in to the [Azure Portal](http://portal.azure.com/) and then navigate to **Microsoft Entra ID**.
+2. Go to your [Microsoft Entra admin center](https://entra.microsoft.com/). Alternatively, you can sign in to the [Azure Portal](http://portal.azure.com/) and then go to **Microsoft Entra ID**.
 3. In Entra, go to **Identity > Applications > App registrations**. If accessing Entra from the Azure Portal, go to **Manage > App registrations**. Select **+New registration** in the top menu.
 4. On the **Register an application** page, provide the following information:
 
-   - Enter a descriptive name for your application such as `Apollo GraphOS`.
+   - Enter a descriptive name for your application, such as `Apollo GraphOS`.
    - Under **Supported account types**, select which Microsoft account types should have access to GraphOS.
    - For **Redirect URI**, select **Web** and enter the redirect URI provided by your Apollo contact.
 
@@ -50,20 +50,20 @@ Setup requires at least a [Cloud Application Administrator](https://learn.micros
 
 1. From the **Overview** section of your newly created app registration, copy and paste your **Application (client) ID** into a local text file.
 2. Next to **Client credentials**, click **Add a certificate or secret** and create a new secret.
-3. Copy and paste the secret's **Value** to the same text file you created earlier.
+3. Copy and paste the secret's **Value** to the text file you created earlier.
 4. Back in the **Overview** section, select **Endpoints** from the top menu.
-5. Copy and open the **OpenID Connect metadata document** URL in a new browser tab. Find the **`issuer`** value. It should have a format like `https://login.microsoftonline.com/unique-value/vx.x`. Copy and paste this URL into your text file.
+5. Copy and open the **OpenID Connect metadata document** URL in a new browser tab. Find the **`issuer`** value. It should be formatted like `https://login.microsoftonline.com/unique-value/vx.x`. Copy and paste this URL into your text file.
 
 ### Step 3. Configure API permissions
 
-1. From the **API permissions** section of your app registration, check whether `User.Read` is listed by default. If isn't, add it manually:
+1. From the **API permissions** section of your app registration, check whether `User.Read` is listed by default. If it isn't, add it manually:
 
    1. Select **+ Add a permission > Microsoft Graph > Application permissions**.
    2. Search for `User`, expand, and select `User.Read.All`. Click **Add permissions**.
    3. **Save** your changes.
 
 2. Also from the **API Permissions** section, select **Grant admin consent for Default Directory** next to the **+ Add a permission** button. Doing this ensures that your users don't need to grant consent during SSO.
-3. From the **Manifest** section of your app registration, find the `groupMembershipClaims` property. Change its value from `null` to either `"All"` or `"SecurityGroup"`. This ensures that the group membership claim is included in _the_ access token during SSO.
+3. From the **Manifest** section of your app registration, find the `groupMembershipClaims` property. Change its value from `null` to either `"All"` or `"SecurityGroup"`. These values ensure that the access token includes the group membership claim during SSO.
 4. **Save** your changes.
 
 ### Step 4. Send OIDC metadata to Apollo
@@ -72,32 +72,18 @@ To complete the configuration, complete the Apollo-provided link provided in ste
 
 - **Client ID**: the **Application (client) ID** you copied
 - **Client Secret**: the secret value you copied
-  - Apollo encrypts this value and stores it securely
+  - Apollo encrypts this value and stores it securely.
 - **Issuer**: the issuer value you copied from the **OpenID Connect metadata document**
 - **Discovery URL**: you don't need to enter this since the **OpenID Connect metadata document** URL follows the standard `/.well-known/openid-configuration` format
 
 Once submitted, inform your Apollo contact. They will then be able to complete your SSO setup.
 
-Once your SSO setup is finalized, team members who previously had access to GraphOS will need to log back in via the new SSO setup.
+Once your SSO setup is finalized, team members who previously had access to GraphOS must log back in via the new SSO setup.
 To give them access, you first need to assign them in Entra.
 
 ## Assign users in Entra ID
 
-Once your Apollo GraphOS application is set up in Entra ID, you need to assign users to it so they can access GraphOS. You can assign individual users or groups from the **User and groups** page of your Apollo GraphOS application in Entra ID.
-
-You may want to begin by adding yourself individually and then testing SSO by clicking **Test** at the bottom of the **Single sign-on** page.
-
-<img
-  src="../../img/sso/entra-sso-test.jpg"
-  alt="SSO testing in Microsoft Entra ID"
-  className="screenshot"
-  width="700"
-/>
-
-Once you've successfully tested your own user's ability to use SSO, add any applicable users or groups.
-When users are first assigned to the Apollo GraphOS application, they must re-login to GraphOS Studio.
-
-Once you've confirmed the new configuration works for your users, remove any legacy Apollo GraphOS applications in Entra ID or app registrations in Azure AD if you have them.
+<SSOEntraIDAssignUsers />
 
 ## Legacy setup
 
@@ -162,7 +148,7 @@ These steps use PingOne's email invite method, because in some cases Apollo's le
    3. **Save** your changes.
    4. If `User.Read` was not auto created, repeat this process for `User.Read`.
 
-2. Also from the **API Permissions** section, select **Grant admin consent** next to the **+ Add a permission** button. Doing this ensures that your users don't need to grant consent during SSO.
+2. Also from the **API Permissions** section, select **Grant admin consent** next to the **+ Add a permission** button. This ensures your users don't need to grant consent during SSO.
 
    <img
      src="../../img/sso/azure-configure-api-permissions.gif"
@@ -171,7 +157,7 @@ These steps use PingOne's email invite method, because in some cases Apollo's le
    />
 
 3. From the **Manifest** section of your app registration, find the `groupMembershipClaims` property. Change its value from `null` to either `All` or `SecurityGroup`.
-   - This ensures that the group membership claim is included in the access token during SSO.
+   - These values ensure that the group membership claim is included in the access token during SSO.
 4. **Save** your changes.
 
    <img
