--- a/src/content/graphos/org/sso/oidc-integration-guide.mdx
+++ b/src/content/graphos/org/sso/oidc-integration-guide.mdx
@@ -7,7 +7,7 @@ description: Configure a OpenID Connect (OIDC) based identity provider as your A
 <SSOPremiumFeature />
 
 This guide walks through configuring a generic OpenID Connect (OIDC) based identity provider (IdP) for use with Apollo SSO.
-If you use Microsoft Entra ID as your IdP, instead see [this guide](./microsoft-entra-id-integration-oidc-guide/).
+If you use Microsoft Entra ID as your IdP, instead see [the Entra OIDC guide](./microsoft-entra-id-integration-oidc-guide/).
 
 # Setup
 
@@ -22,10 +22,10 @@ These steps generally require administrative access to your IdP.
 
 ### Step 1. Create a custom application
 
-1. Send a request to your Apollo contact to configure an OIDC SSO integration. Include the organization name(s) you are setting up SSO for, as well as the email domains you want to associate with the organization. Your Apollo contact will respond with:
+1. Send a request to your Apollo contact to configure an OIDC SSO integration. Include the organization name(s) you are setting up SSO for, and the email domains you want to associate with the organization. Your Apollo contact will respond with:
 
    - A redirect URI
-   - A link to a form where you can submit your SSO information to Apollo—you'll use this form in the last setup step.
+   - A link to a form where you can submit your SSO information to Apollo. You'll use this form in the last setup step.
 
    <Note>
 
